@@ -81,6 +81,9 @@ enum Mk5State
 	MARK5_STATE_COPY,
 	MARK5_STATE_CONDITION,
 	MARK5_STATE_COND_ERROR,
+	MARK5_STATE_TEST,
+	MARK5_STATE_TESTWRITE,
+	MARK5_STATE_TESTREAD,
 	NUM_MARK5_STATES	/* this needs to be the last line of enum */
 };
 
