@@ -1,6 +1,9 @@
 Version 7.1
 ~~~~~~~~~~~
 Do better job expanding "entities" in XML formation
+ - do expansion more universally
+ - encode ascii values 1-31 in [[]] so they can be idenfied and not crash parsers
+Add new Mark5 States: Test TestWrite and TestRead
 
 Version 0.7 20090904
 ~~~~~~~~~~~
